# angzarr-client-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  TASKS.md  TIER5_PLAN.md  buf.gen.yaml  build.rs  justfile  justfile.container  lefthook.yml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml  mutation.yml  release.yml
angzarr-macros/: Cargo.toml
angzarr-macros/src/: lib.rs
scripts/: sync-features.sh
src/: builder.rs  client.rs  compensation.rs  convert.rs  error.rs  error_codes.rs  handler.rs  identity.rs  lib.rs  proto.rs  proto_ext.rs  readiness.rs  retry.rs  server.rs  traits.rs  transport.rs  validation.rs
src/proto/: generated.rs  mod.rs
src/proto_ext/: books.rs  constants.rs  grpc.rs  mod.rs  pages.rs  type_url.rs  type_url.test.rs  uuid.rs
src/router/: builder.rs  cloudevents.rs  dispatch.rs  factory.rs  handler.rs  helpers.rs  mod.rs  responses.rs  runtime.rs  saga_context.rs  state.rs  traits.rs  upcaster.rs
src/testing/: builders.rs  context.rs  mod.rs  uuid.rs
tests/: features.rs  router.rs
tests/router/: builder.rs  decorators.rs  dispatch_command_handler.rs  dispatch_pm.rs  dispatch_projector.rs  dispatch_saga.rs  multi_handler.rs  rejection.rs  sequence.rs  stacking.rs  state_rebuild.rs  validation.rs
tests/router/ui/: aggregate_without_state.rs  aggregate_without_state.stderr  command_handler_without_state.rs  command_handler_without_state.stderr  method_stack_handles_applies.rs  method_stack_handles_applies.stderr  process_manager_without_pm_domain.rs  process_manager_without_pm_domain.stderr  process_manager_without_sources.rs  process_manager_without_sources.stderr  process_manager_without_targets.rs  process_manager_without_targets.stderr  projector_without_domains.rs  projector_without_domains.stderr  saga_without_target.rs  saga_without_target.stderr  stack_aggregate_projector.rs  stack_aggregate_projector.stderr  stack_aggregate_saga.rs  stack_aggregate_saga.stderr  stack_command_handler_projector.rs  stack_command_handler_projector.stderr  stack_command_handler_saga.rs  stack_command_handler_saga.stderr  stack_same_kind.rs  stack_same_kind.stderr  with_handler_rejects_non_handler.rs  with_handler_rejects_non_handler.stderr
tests/steps/: builder.rs  command_builder.rs  command_handler.rs  compensation.rs  decorators.rs  destinations.rs  error_handling.rs  event_decoding.rs  identity.rs  mod.rs  multi_handler.rs  parity.rs  process_manager.rs  projector.rs  query_builder.rs  query_client.rs  rejected_compensation.rs  rejection.rs  retry.rs  router.rs  saga.rs  state_building.rs  testing.rs  upcaster.rs  validation.rs  wire_parity.rs
