[workspace]
members = [".", "angzarr-macros"]
exclude = ["angzarr-core"]
resolver = "2"

[package]
name = "angzarr-client"
version = "0.5.0"
edition = "2021"
description = "Ergonomic Rust client for Angzarr CQRS/ES framework"
license = "AGPL-3.0-only"
repository = "https://github.com/benjaminabbitt/angzarr"
documentation = "https://docs.rs/angzarr-client"
keywords = ["cqrs", "event-sourcing", "grpc", "client"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Core framework (proto types, extension traits, client trait definitions)
# Resolved to local submodule via [patch] in .cargo/config.toml
angzarr = { git = "https://github.com/angzarr-io/angzarr.git", tag = "v0.5.0" }

# Macros (re-exported for convenience)
angzarr-macros = { version = "0.1.0", path = "angzarr-macros" }

# gRPC
tonic = { version = "0.14", features = ["tls-ring", "transport"] }
prost = "0.14"
prost-types = "0.14"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"
tower = "0.5"
hyper-util = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "v5"] }
chrono = "0.4"
hex = "0.4"
thiserror = "2"
backon = "1"

# Serialization (for descriptor types)
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tonic-prost = "0.14.5"

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[[test]]
name = "features"
harness = false

[features]
default = []
tls = []
