[workspace]
members = [".", "angzarr-macros"]
resolver = "2"

[package]
name = "angzarr-client"
version = "0.5.0"
edition = "2021"
description = "Ergonomic Rust client for Angzarr CQRS/ES framework"
license = "AGPL-3.0-only"
repository = "https://github.com/benjaminabbitt/angzarr"
documentation = "https://docs.rs/angzarr-client"
keywords = ["cqrs", "event-sourcing", "grpc", "client"]
categories = ["network-programming", "asynchronous"]

[package.metadata.docs.rs]
# Tell docs.rs to build with all features enabled and pin to one target so the
# page's left nav lists the full API. docs.rs picks these up automatically on
# `cargo publish` — no external workflow or secret needed.
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Macros (re-exported for convenience)
angzarr-macros = { version = "0.1.0", path = "angzarr-macros" }

# gRPC
tonic = { version = "0.14", features = ["tls-ring", "transport"] }
prost = "0.14"
prost-types = "0.14"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"
tower = "0.5"
hyper-util = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "v5"] }
chrono = "0.4"
hex = "0.4"
thiserror = "2"
backon = "1"

# Serialization (for descriptor types)
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tonic-prost = "0.14.5"

# Health
tonic-health = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
trybuild = "1"
sha2 = "0.10"

[[test]]
name = "features"
harness = false

[features]
default = []
tls = []
